Update 2. Грустная песня про Power BI.md

--- a/2. Грустная песня про Power BI.md
+++ b/2. Грустная песня про Power BI.md
@@ -1,6 +1,7 @@
-#2. Грустная песня про Power BI
+2. Грустная песня про Power BI
 
-###Куплет:
+Куплет:
+
 Ну почему я этого не знал
 
 Теперь грустно совсем
@@ -13,7 +14,8 @@
 
 ммммм... на эм
 
-###Куплет:
+Куплет:
+
 Ну почему я этого не знал
 
 Теперь вообще атас
@@ -26,7 +28,8 @@
 
 мммммм... на дакс
 
-###Куплет:
+Куплет:
+
 Ну почему я этого не знал
 
 Теперь грусти-страдай
