Update and rename README.md to 3/3. Обновление отчёта.md

--- a/3/3. Обновление отчёта.md
+++ b/3/3. Обновление отчёта.md
@@ -1,4 +1,5 @@
-###Куплет:
+Куплет:
+
 Я запустил отчёт он начал обновляться
 
 Пока он это делал я пошел за кофе
@@ -7,7 +8,8 @@
 
 Давлю на кнопки а отчёту пофиг
 
-###Припев:
+Припев:
+
 Ты подожди 
 
 пока загрузится отчёт
@@ -31,7 +33,8 @@
 
 Не буду ждать - зачем мне портить нервы
 
-###Припев:
+
+Припев:
 
 Ты подожди 
 
