Update 2. Грустная песня про Power BI .md

--- a/2. Грустная песня про Power BI .md
+++ b/2. Грустная песня про Power BI .md
@@ -7,11 +7,11 @@
 
 Ведь нужно было учить питон
 
-А я писал... на эм
+А я писал... на M
 
-ммммм... на эм
+ммммм... на M
 
-ммммм... на эм
+ммммм... на M
 
 ### Куплет:
 Ну почему я этого не знал
